WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106436
[GTK] Volume button should not be shown for videos without audio
https://bugs.webkit.org/show_bug.cgi?id=106436
Summary
[GTK] Volume button should not be shown for videos without audio
Halton Huo
Reported
2013-01-09 03:11:38 PST
With code trunk@138776, test LayoutTests/media/video-no-audio.html, the volume control will shown which is not expected. The same thing need to be done as EFL
bug #97574
.
Attachments
Patch
(2.52 KB, patch)
2013-01-09 03:27 PST
,
Halton Huo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Halton Huo
Comment 1
2013-01-09 03:27:33 PST
Created
attachment 181888
[details]
Patch
Philippe Normand
Comment 2
2013-01-11 03:58:30 PST
The controls are being reworked in
bug 83869
. Not sure this patch makes sense meanwhile. Xabier, what do you think?
Xabier Rodríguez Calvar
Comment 3
2013-01-11 10:36:23 PST
I talked to Jon Mccann and he says that the best would be showing the mute icon and show a "no audio" tooltip when hovering the button. So I guess this will be deeply reworked. I guess it will still take some time until we finish the controls, so we could push it as a temporary solution if it does not break any test, of course.
Halton Huo
Comment 4
2013-01-13 20:52:43 PST
trunk@139575 still can not pass media/video-no-audio.html, while PASS with patch #181888.
Philippe Normand
Comment 5
2013-01-13 23:46:28 PST
Are you sure no rebaseline of the test is needed?
Halton Huo
Comment 6
2013-01-15 18:30:32 PST
(In reply to
comment #5
)
> Are you sure no rebaseline of the test is needed?
Just conflict on WebCore/GNUmakefile.list.am, easy to resolve. Actually with patch for
bug 83869
, the DumpRenderTree will crash when run-webkit-tests LayoutTests/media/video-no-audio.html, but PASS with run-launcher.
Xabier Rodríguez Calvar
Comment 7
2013-01-15 23:41:27 PST
(In reply to
comment #6
)
> (In reply to
comment #5
) > > Are you sure no rebaseline of the test is needed? > Just conflict on WebCore/GNUmakefile.list.am, easy to resolve. > > Actually with patch for
bug 83869
, the DumpRenderTree will crash when run-webkit-tests LayoutTests/media/video-no-audio.html, but PASS with run-launcher.
Patch for
bug 83869
is under high development, so you cannot trust it yet.
Halton Huo
Comment 8
2013-01-15 23:51:18 PST
(In reply to
comment #7
)
> Patch for
bug 83869
is under high development, so you cannot trust it yet.
Yes, I know, Philippe's comment made me to try whether the working
bug 83869
will fix or hide this bug. I just give my try.
Halton Huo
Comment 9
2013-01-20 21:54:31 PST
Ping, anyone could continue review on it?
WebKit Review Bot
Comment 10
2013-01-21 08:41:01 PST
Comment on
attachment 181888
[details]
Patch Clearing flags on attachment: 181888 Committed
r140339
: <
http://trac.webkit.org/changeset/140339
>
WebKit Review Bot
Comment 11
2013-01-21 08:41:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug