[GTK] Volume button should not be shown for videos without audio https://bugs.webkit.org/show_bug.cgi?id=106436

Patch by Halton Huo <halton.huo@intel.com> on 2013-01-21
Reviewed by Philippe Normand.

The volume control is no longer shown for videos with no audio.

No new tests, tested by media/video-no-audio.html.

* platform/gtk/RenderThemeGtk.cpp:
(WebCore::RenderThemeGtk::hasOwnDisabledStateHandlingFor):
(WebCore):
* platform/gtk/RenderThemeGtk.h:

Canonical link: https://commits.webkit.org/125692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140339 268f45cc-cd09-0410-ab3c-d52691b4dbfc